@@ -157,4 +157,6 @@ interface LMSFinanceManagerInterface
     public function CopyCashRegistryPermissions($src_userid, $dst_userid);
 
     public function CopyPromotionTariffPermissions($src_userid, $dst_userid);
+
+    public function transformProformaInvoice($docid);
 }
